--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,13 +31,14 @@ a {
 }
 
 .nav-main {
-  font-weight: 600;
+  font-weight: 700;
 }
 .nav-main ul {
   display: flex;
   justify-content: center;
 }
 .nav-main ul a {
+  display: inline-block;
   color: #000;
   font-size: 20px;
   padding: 15px;
@@ -46,13 +47,32 @@ a {
   background-color: #b2e5fc;
 }
 
+main {
+  background-image: url("../images/fondo-pag-speciali.jpg");
+}
+
 section {
-  margin: 30px 0;
+  padding: 40px;
 }
 section h2 {
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 600;
   color: #002d73;
+}
+
+.products {
+  padding: 40px;
+  color: #002d73;
+  background-color: #b7dae5;
+}
+.products h1 {
+  text-align: center;
+}
+.products img {
+  width: 100%;
+}
+.products p {
+  font-weight: 600;
 }
 
 .cards {
