--- a/resources/sass/Partials/_header.scss
+++ b/resources/sass/Partials/_header.scss
@@ -4,13 +4,14 @@
 }
 
 .nav-main {  
-    font-weight: 600;
+    font-weight: 700;
 
     ul {
         display: flex;
         justify-content: center;
         
         a {
+            display: inline-block;
             color: #000;
             font-size: 20px;
             padding: 15px;
