--- a/resources/sass/Partials/_main.scss
+++ b/resources/sass/Partials/_main.scss
@@ -1,14 +1,33 @@
-// main {
-//     background-image: url("../image/fondo-pag-speciali.jpg");
-// }
+main {
+    background-image: url("../images/fondo-pag-speciali.jpg");
+}
 
 section {
-    margin: 30px 0;
+
+    padding: 40px;
 
     h2 {
         text-transform: uppercase;
-        font-weight: 400;
+        font-weight: 600;
         color: $main_color;
+    }
+}
+
+.products {
+    padding: 40px;
+    color: $main_color;
+    background-color: $background_product;
+
+    h1 {
+        text-align: center;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    p {
+        font-weight: 600;
     }
 }
 
